--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <label for="datafile">데이터 파일: </label>
-    <select id="datafile">
-      <option disabled selected value>파일 선택</option>
-    </select>
-    <div id="visualizer"></div>
+    <div id="body">
+      <h1>Staffetta Visualizer</h1>
+      <label for="datafile">데이터 파일: </label>
+      <select id="datafile">
+        <option disabled selected value>파일 선택</option>
+      </select>
+      <div id="visualizer"></div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.13.0/d3-legend.min.js"></script>
     <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
