클라이언트에서 파일 업로드하는 부분 구현

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <select id="datafile">
         <option disabled selected value>파일 선택</option>
       </select>
-      <form action="/upload", method="post", enctype="multipart/form-data">
+      <form id="upload" action="/upload", method="post", enctype="multipart/form-data">
         <input type="text" name="simulationName">
         <input type="file" name="csc">
         <input type="file" name="log">
