영어로 변경

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,8 @@
   <body>
     <div id="body">
       <h1>Staffetta Visualizer</h1>
-      <label for="datafile">Data file: </label>
+      <label for="datafile">Simulation file: </label>
       <select id="datafile">
-        <option disabled selected value>Select file</option>
       </select>
       <button id="uploadButton">Upload Simulation Files</button>
       <div id="visualizer"></div>
