--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
       <button id="uploadButton">Upload Simulation Files</button>
       <div id="visualizer"></div>
     </div>
+    <div id="footer">
+      <span>by <a href="https://github.com/ybbarng">ybbarng</a>
+    </div>
     <div id="uploadModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
